--- a/package.json
+++ b/package.json
@@ -11,10 +11,9 @@
     "start": "node dist/app.js",
     "test": "jest",
     "seeder": "ts-node src/assets/import/index.ts",
-    "migration":"sequelize-cli db:migrate",
-    "un_migration":"sequelize-cli db:migrate:undo",
-    "seed":"sequelize-cli db:seed:all"
-
+    "migration": "sequelize-cli db:migrate",
+    "un_migration": "sequelize-cli db:migrate:undo",
+    "seed": "sequelize-cli db:seed:all"
   },
   "dependencies": {
     "@faker-js/faker": "^7.3.0",
@@ -29,11 +28,15 @@
     "eslint": "^8.22.0",
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
+    "i18next": "^22.4.11",
+    "i18next-express-middleware": "^2.0.0",
+    "i18next-node-fs-backend": "^2.1.3",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
     "pg": "^8.7.3",
+    "redis": "^4.6.5",
     "reflect-metadata": "^0.1.13",
     "rotating-file-stream": "^3.0.4",
     "sanitize-html": "^2.8.1",
