--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "seeder": "ts-node src/assets/import/index.ts",
     "migration": "sequelize-cli db:migrate",
     "un_migration": "sequelize-cli db:migrate:undo",
-    "seed": "sequelize-cli db:seed:all"
+    "seed": "sequelize-cli db:seed:all",
+    "reset": "sequelize-cli db:migrate && sequelize-cli db:seed:all"
   },
   "dependencies": {
     "@faker-js/faker": "^7.3.0",
@@ -24,6 +25,7 @@
     "body-parser": "^1.20.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
     "eslint": "^8.22.0",
     "express": "^4.18.1",
@@ -34,11 +36,9 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "mysql2": "^2.3.3",
     "pg": "^8.7.3",
     "redis": "^4.6.5",
     "reflect-metadata": "^0.1.13",
-    "rotating-file-stream": "^3.0.4",
     "sanitize-html": "^2.8.1",
     "sequelize": "^6.21.3",
     "sequelize-cli": "^6.4.1",
