--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.2.0",
     "pg": "^8.7.3",
     "redis": "^4.6.5",
     "reflect-metadata": "^0.1.13",
