--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "i18next-node-fs-backend": "^2.1.3",
     "inflection": "^2.0.1",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "mongoose": "^7.0.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
@@ -50,7 +51,7 @@
     "sanitize-html": "^2.8.1",
     "sequelize": "^6.29.3",
     "sequelize-cli": "^6.4.1",
-    "sequelize-hierarchy-ts": "^3.0.0",
+    "sequelize-hierarchy": "^2.0.4",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
