--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "express-rate-limit": "^6.7.0",
     "express-validator": "^6.14.2",
     "helmet": "^6.0.1",
+    "hpp": "^0.2.3",
     "i18next": "^22.4.11",
     "i18next-express-middleware": "^2.0.0",
     "i18next-node-fs-backend": "^2.1.3",
@@ -42,6 +43,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongoose": "^7.0.2",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.2.0",
     "pg": "^8.7.3",
@@ -50,7 +52,11 @@
     "sanitize-html": "^2.8.1",
     "sequelize": "^6.29.3",
     "sequelize-cli": "^6.4.1",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "tsc-alias": "^1.8.4",
+    "typedi": "^0.10.0",
+    "winston": "^3.8.1",
+    "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
