--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express": "^4.18.1",
     "express-rate-limit": "^6.7.0",
     "express-validator": "^6.14.2",
+    "fs-extra": "^11.1.1",
     "helmet": "^6.0.1",
     "hpp": "^0.2.3",
     "i18next": "^22.4.11",
