--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "ts-node": "^10.9.1",
     "tsc-alias": "^1.8.4",
     "typedi": "^0.10.0",
+    "underscore": "^1.13.6",
     "winston": "^3.8.1",
     "winston-daily-rotate-file": "^4.7.1"
   },
