--- a/package.json
+++ b/package.json
@@ -32,13 +32,14 @@
     "dotenv": "^16.0.3",
     "eslint": "^8.22.0",
     "express": "^4.18.1",
+    "express-jwt": "^8.4.1",
     "express-rate-limit": "^6.7.0",
     "express-validator": "^6.14.2",
     "fs-extra": "^11.1.1",
     "helmet": "^6.0.1",
     "hpp": "^0.2.3",
     "inflection": "^2.0.1",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "mongoose": "^7.0.2",
     "morgan": "^1.10.0",
