--- a/.env.production
+++ b/.env.production
@@ -4,11 +4,11 @@ BASE_URL=http://localhost:8000
 STATIC_URL=http://localhost:8000
 
 # DATABASE
-DB_USER=root
-DB_PASS=root
+DB_USER=toannguyen112
+DB_PASS=toannguyen112
 DB_HOST=localhost
 DB_PORT=3306
-DB_NAME=tn-uptech-backend
+DB_NAME=uptech
 
 # TOKEN
 SECRET_KEY = secretKey
