--- a/.env.production
+++ b/.env.production
@@ -8,7 +8,7 @@ STATIC_URL=http://localhost:8000
 # DATABASE
 DB_USER=toannguyen112
 DB_PASS=toannguyen112
-DB_HOST=localhost
+DB_HOST=123
 DB_PORT=3306
 DB_NAME=uptech
 
