--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ STATIC_URL=http://localhost:8000
 # DATABASE
 DB_USER=root
 DB_PASS=root
-DB_HOST=localhost
+DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_NAME=tn-uptech-backend
 
