--- a/.env.development
+++ b/.env.development
@@ -8,7 +8,7 @@ DB_USER=root
 DB_PASS=root
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_NAME=tn-uptech-backend
+DB_NAME=uptech
 
 # TOKEN
 SECRET_KEY = secretKey
