--- a/.env.development
+++ b/.env.development
@@ -4,8 +4,8 @@ BASE_URL=http://localhost:8000
 STATIC_URL=http://localhost:8000
 
 # DATABASE
-DB_USER=root
-DB_PASS=root
+DB_USER=toannguyen112
+DB_PASS=toannguyen112
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_NAME=uptech
