--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/validator": "^13.7.4",
+    "@types/express": "^4.17.13",
+    "@types/jest": "^28.1.7",
+    "@types/node": "^18.6.3",
     "axios": "^1.1.3",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
@@ -55,17 +58,15 @@
     "ts-node": "^10.9.1",
     "tsc-alias": "^1.8.4",
     "winston": "^3.8.1",
-    "winston-daily-rotate-file": "^4.7.1"
+    "winston-daily-rotate-file": "^4.7.1",
+    "typescript": "^4.7.4"
   },
   "devDependencies": {
-    "@types/express": "^4.17.13",
-    "@types/jest": "^28.1.7",
-    "@types/node": "^18.6.3",
+    
     "@types/supertest": "^2.0.12",
     "nodemon": "^2.0.18",
     "sucrase": "^3.23.0",
     "supertest": "^6.2.4",
-    "ts-jest": "^28.0.8",
-    "typescript": "^4.7.4"
+    "ts-jest": "^28.0.8"
   }
 }
