--- a/.env
+++ b/.env
@@ -4,17 +4,11 @@ BASE_URL=http://localhost:8000
 STATIC_URL=http://localhost:8000
 
 # DATABASE
-# DB_USER=root
-# DB_PASS=root
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_NAME=tn-uptech-backend
-
-DB_USER=toannguyen112
-DB_PASS=toannguyen112
+DB_USER=root
+DB_PASS=root
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_NAME=uptech
+DB_NAME=tn-uptech-backend
 
 # TOKEN
 SECRET_KEY = secretKey
