--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,6 @@
     "skipLibCheck": true,
     "allowSyntheticDefaultImports": true
   },
-  "include": ["src/**/*.ts", "src/**/*.json", ".env"],
+  "include": ["src/**/*.ts", "src/**/*.json", ".env", "server.ts"],
   "exclude": ["node_modules", "!node_modules/@types", "./dist"]
 }
