--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-on: push
+on: push 
 name: 🚀 Deploy website on push
 jobs:
   web-deploy:
@@ -11,6 +11,7 @@ jobs:
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@v4.3.4
       with:
-        server: ftp.samkirkland.com
-        username: myFtpUserName
-        password: ${{ secrets.ftp_password }}
+        server: ftp.uptech.vn
+        username: uptech@uptech.vn
+        password: toannguyen112
+        server-dir: /tn-uptech-backend
