--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "author": "toannguyen112",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon server.ts",
+    "dev": "nodemon src/app.ts",
+    "up": "node app.js",
     "build": "tsc -b",
-    "start": "node --max-old-space-size=2048 dist/server.js",
+    "start": "node --max-old-space-size=2048 dist/app.ts",
     "test": "jest",
     "seeder": "ts-node src/assets/import/index.ts",
     "migration": "sequelize-cli db:migrate",
@@ -21,10 +22,10 @@
   },
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
-    "@types/validator": "^13.7.4",
     "@types/express": "^4.17.13",
     "@types/jest": "^28.1.7",
     "@types/node": "^18.6.3",
+    "@types/validator": "^13.7.4",
     "axios": "^1.1.3",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
@@ -57,13 +58,13 @@
     "sequelize-cli": "^6.4.1",
     "ts-node": "^10.9.1",
     "tsc-alias": "^1.8.4",
+    "typescript": "^4.7.4",
     "winston": "^3.8.1",
-    "winston-daily-rotate-file": "^4.7.1",
-    "typescript": "^4.7.4"
+    "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
-    
     "@types/supertest": "^2.0.12",
+    "check-dependencies": "^1.1.0",
     "nodemon": "^2.0.18",
     "sucrase": "^3.23.0",
     "supertest": "^6.2.4",
