--- a/.env.production
+++ b/.env.production
@@ -1,16 +1,14 @@
-NODE_ENV="production"
-
 # PORT
 PORT=8000
 BASE_URL=http://localhost:8000
 STATIC_URL=http://localhost:8000
 
 # DATABASE
-DB_USER=toannguyen112
-DB_PASS=toannguyen112
+DB_USER=root
+DB_PASS=root
 DB_HOST=localhost
 DB_PORT=3306
-DB_NAME=uptech
+DB_NAME=tn-uptech-backend
 
 # TOKEN
 SECRET_KEY = secretKey
