--- a/.env
+++ b/.env
@@ -14,6 +14,9 @@ DB_NAME=tn-uptech-backend
 # TOKEN
 SECRET_KEY = secretKey
 
+SERVER_JWT_SECRET=123
+SERVER_JWT_TIMEOUT=1d
+
 # LOG
 LOG_FORMAT = dev
 LOG_DIR = ../logs
