--- a/.env.production
+++ b/.env.production
@@ -1,17 +1,20 @@
 # PORT
 PORT=8000
-BASE_URL=http://localhost:8000
-STATIC_URL=http://localhost:8000
+BASE_URL=https://uptech-backend-production.herokuapp.com
+STATIC_URL=https://uptech-backend-production.herokuapp.com
 
 # DATABASE
-DB_USER=root
-DB_PASS=root
-DB_HOST=localhost
+DB_USER=ihbtmji4btc9xkrg
+DB_PASS=nuhc9mgi7omzf74e
+DB_HOST=grp6m5lz95d9exiz.cbetxkdyhwsb.us
 DB_PORT=3306
-DB_NAME=tn-uptech-backend
+DB_NAME=q89lkxqoce99fb6i
 
 # TOKEN
 SECRET_KEY = secretKey
+
+SERVER_JWT_SECRET= 123
+SERVER_JWT_TIMEOUT= 1d
 
 # LOG
 LOG_FORMAT = dev
