--- a/.env.development
+++ b/.env.development
@@ -1,7 +1,7 @@
 # PORT
 PORT=8000
-BASE_URL=https://uptech-backend-staging.herokuapp.com
-STATIC_URL=https://uptech-backend-staging.herokuapp.com
+BASE_URL=http://localhost:8000
+STATIC_URL=http://localhost:8000
 
 # DATABASE
 DB_USER=root
