--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "axios": "^1.1.3",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
+    "cloudinary": "^1.37.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -47,6 +48,7 @@
     "mongoose": "^7.0.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "mysql2": "^3.2.0",
     "pg": "^8.7.3",
     "pm2": "^5.3.0",
