--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "sanitize-html": "^2.8.1",
     "sequelize": "^6.29.3",
     "sequelize-cli": "^6.4.1",
+    "slugify": "^1.6.6",
     "ts-node": "^10.9.1",
     "tsc-alias": "^1.8.4",
     "typescript": "^4.7.4",
