--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,21 @@
-NODE_ENV="production"
 # PORT
+
 PORT=8000
 BASE_URL=http://localhost:8000
 STATIC_URL=http://localhost:8000
 
 # DATABASE
-DB_USER=ihbtmji4btc9xkrg
-DB_PASS=nuhc9mgi7omzf74e
-DB_HOST=grp6m5lz95d9exiz.cbetxkdyhwsb.us
+DB_USER=root
+DB_PASS=root
+DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_NAME=q89lkxqoce99fb6i
+DB_NAME=tn-uptech-backend
 
 # TOKEN
 SECRET_KEY = secretKey
 
-SERVER_JWT_SECRET= 123
-SERVER_JWT_TIMEOUT= 1d
+SERVER_JWT_SECRET=123
+SERVER_JWT_TIMEOUT=1d
 
 # LOG
 LOG_FORMAT = dev
