--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@ PORT=8000
 BASE_URL=http://localhost:8000
 STATIC_URL=http://localhost:8000
 
+NODE_ENV='development'
 # DATABASE
 DB_USER=root
 DB_PASS=root
@@ -24,3 +25,4 @@ LOG_DIR = ../logs
 # CORS
 ORIGIN = *
 CREDENTIALS = true
+DB_MONGODB_URL=
