--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ PORT=8000
 BASE_URL=http://localhost:8000
 STATIC_URL=http://localhost:8000
 
-NODE_ENV='development'
+NODE_ENV='production'
 # DATABASE
 DB_USER=root
 DB_PASS=root
