--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ PORT=8000
 BASE_URL=http://localhost:8000
 STATIC_URL=http://localhost:8000
 
+NODE_ENV='development'
 # DATABASE
 DB_USER=root
 DB_PASS=root
